# ecommerce-analytics-data-platform

./: .gitignore  README.md  __init__.py  forecasting.py  inventory.py  pyproject.toml  requirements.txt  transaction.py
.github/workflows/: ci.yml
data/samples/: daily_sales_sample.csv
scripts/: demo_forecast.py
tests/: test_forecasting.py  test_transaction.py
