[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winmart-analytics-data-platform"
version = "1.0.0"
description = "Winmart (VN grocery retail) analytics data platform — POS, inventory, LightGBM demand forecasting, and supply chain KPIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WillTran", email = "willtran112358@users.noreply.github.com"},
]
keywords = ["retail", "pos", "inventory", "forecasting", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10+",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "apache-airflow>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
]
